Remove references to old coverage implementation
PiperOrigin-RevId: 713382378
Change-Id: If32778574a51375b33a694aa5d31515337d71566